# akinf_project

./: .gitignore  CHANGELOG.md  LICENSE  README.md  akinf-project.cabal  config.toml  config.yaml  readme.txt  run.bat  run.sh
app/: Main.hs
bench/: Bench.hs
src/AkinfProject/: CSV.hs  Calculate.hs  Config.hs  Filter.hs  Output.hs
test/: PropMain.hs  PropertyTests.hs  Spec.hs  test-config.yaml
