cabal-version:      3.4
name:               akinf-project
version:            0.1.0.0
homepage:           https://github.com/icefishii/akinf_project
license:            MIT
license-file:       LICENSE
author:             Benjamin Lampart, Karim Salem
maintainer:         sera@icefish.dev
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  import: warnings

  exposed-modules:
      AkinfProject.CSV
      AkinfProject.Config
      AkinfProject.Calculate
      AkinfProject.Output

  hs-source-dirs: src

  build-depends:
      base == 4.18.3.0,
      bytestring == 0.11.5.4,
      cassava == 0.5.3.0,
      text == 2.0.2,
      containers == 0.6.7,
      vector == 0.13.2.0,
      yaml == 0.11.11.2

  default-language: GHC2021


executable akinf-project
  import:           warnings

  main-is:          Main.hs
  hs-source-dirs:   app

  build-depends:
      base == 4.18.3.0,
      akinf-project,
      vector == 0.13.2.0

  default-language: GHC2021


test-suite akinf-project-tests
  import:           warnings

  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test

  build-depends:
      base == 4.18.3.0,
      akinf-project,
      tasty == 1.5,
      tasty-hunit == 0.10.0.3,
      vector == 0.13.2.0,
      bytestring == 0.11.5.4,
      yaml == 0.11.11.2

  default-language: GHC2021
