cabal-version:      3.4
name:               akinf-project
version:            0.1.0.0
homepage:           https://github.com/icefishii/akinf_project
license:            MIT
license-file:       LICENSE
author:             Benjamin Lampart, Karim Salem
maintainer:         sera@icefish.dev
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common optimizations
    ghc-options: -O2 -funbox-strict-fields -fspecialise-aggressively

library
  import: warnings, optimizations

  exposed-modules:
      AkinfProject.CSV
      AkinfProject.Config
      AkinfProject.Calculate
      AkinfProject.Output
      AkinfProject.Filter

  hs-source-dirs: src

  build-depends:
      base >= 4.18.3.0,
      bytestring == 0.11.5.4,
      cassava == 0.5.3.0,
      text >= 2.0.2,
      containers >= 0.6.7,
      vector == 0.13.2.0,
      yaml == 0.11.11.2,
      time == 1.12.2,
      deepseq >= 1.4.4,

  default-language: GHC2021


executable akinf-project
  import:           warnings, optimizations

  main-is:          Main.hs
  hs-source-dirs:   app

  build-depends:
      base >= 4.18.3.0,
      akinf-project,
      vector == 0.13.2.0,
      containers >= 0.6.7,

  default-language: GHC2021


test-suite akinf-project-tests
  import:           warnings

  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test

  build-depends:
      base >= 4.18.3.0,
      bytestring == 0.11.5.4,
      cassava == 0.5.3.0,
      text >= 2.0.2,
      containers >= 0.6.7,
      vector == 0.13.2.0,
      yaml == 0.11.11.2,
      time == 1.12.2,
      akinf-project,
      tasty == 1.5,
      tasty-hunit == 0.10.0.3,
  default-language: GHC2021

benchmark akinf-project-benchmark
  import:           warnings

  type:             exitcode-stdio-1.0
  main-is:          Bench.hs
  hs-source-dirs:   bench

  build-depends:
      vector ^>=0.13.2.0,
      containers ^>=0.6.8,
      yaml >=0.11.11.2,
      base >= 4.18.3.0,
      akinf-project,
      criterion >= 1.6,
      bytestring == 0.11.5.4,

  default-language: GHC2021
